syntax = "proto3";

package logsdb.protos.cluster;

service Clustering {
  rpc ping(PingRequest) returns (PingResponse) {};
  rpc paxos(PaxosRequest) returns (PaxosResponse) {};
}


message PingRequest {
  string server = 1;
}

message PingResponse {

}

message PaxosRequest {
  oneof sealed_value {
    PrepareRequest prepare = 1;
    PromiseRequest promise = 2;
    AcceptRequest accept = 3;
    AcceptedRequest accepted = 4;
    RejectRequest reject = 5;
  }
}
message PaxosResponse {

}

message AcceptedValueRequest {
  uint64 view = 1;
  uint64 number = 2;
  string value = 3;
}
message PrepareRequest {
  string nodeId = 1;
  uint64 view = 2;
  uint64 number = 3;
}
message PromiseRequest {
  string nodeId = 1;
  uint64 view = 2;
  uint64 number = 3;
  AcceptedValueRequest prevAccepted = 4;
}
message RejectRequest {
  string nodeId = 1;
  uint64 view = 2;
  uint64 number = 3;
  AcceptedValueRequest prevAccepted = 4;
}
message AcceptRequest {
  string nodeId = 1;
  uint64 view = 2;
  uint64 number = 3;
  string value = 4;
}
message AcceptedRequest {
  string nodeId = 1;
  uint64 view = 2;
  uint64 number = 3;
  string value = 4;
}